# mogoca

./: 404.html  IMPLEMENTATION_COVERAGE.md  LICENSE  Makefile  Pipfile  README.md  index.html  mkdocs.yml  pyproject.toml  setup.cfg  sitemap.xml
.github/workflows/: build.yml  documentation.yml
mogoca/: __init__.py
mogoca/storage/: __init__.py  models.py
search/: search_index.json
tests/: conftest.py
tests/test_storage/: test_storage.py
